Adjust pom.xml and java code